# ai_framework

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  matrix.cu  matrix.cuh
src/ai/: neural_net.cpp  neural_net.cu  neural_net.cuh  neural_net.hpp
src/utils/: matrix.cpp  matrix.cu  matrix.cuh
tests/: CMakeLists.txt  main_test.cpp  matrix_test.cpp  matrix_test.cu  neural_net_test.cpp  neural_net_test.cu
